--- a/install/roles/cobbler/vars/main.yml
+++ b/install/roles/cobbler/vars/main.yml
@@ -1,6 +1,6 @@
 #dockerized: True
-compass_adapter_source: http://git.openstack.org/stackforge/compass-adapters
-compass_adapter_version: dev/experimental
+compass_adapter_source: https://github.com/baigk/compass-adapters.git
+compass_adapter_version: master
 epel_file_name: epel-release-6-8.noarch.rpm
 epel_base_url: http://download.fedoraproject.org/pub/epel/6/x86_64/
 epel7_base_url: http://download.fedoraproject.org/pub/epel/7/x86_64/e/
