--- a/install/roles/compass/tasks/RedHat.yml
+++ b/install/roles/compass/tasks/RedHat.yml
@@ -79,31 +79,30 @@
   easy_install: name=pip
 
 - name: install virtualenv
-  pip: name=virtualenv extra_args='-i http://pypi.douban.com/simple/'
+  pip: name=virtualenv extra_args='-i http://pypi.douban.com/simple/ --trusted-host pypi.douban.com'
 
 - name: cloning compass-core
-  git: repo=http://git.openstack.org/stackforge/compass-core.git
+  git: repo=https://github.com/baigk/compass-core.git
        dest={{ COMPASS_PATH }}
-       version=dev/experimental
        force=yes
 
 - name: pip install compass into virtualenv
   pip: name={{ COMPASS_PATH }} virtualenv={{ COMPASS_PATH }}/venv
-       extra_args='-i http://pypi.douban.com/simple/'
+       extra_args='-i http://pypi.douban.com/simple/ --trusted-host pypi.douban.com'
 
 - name: pip install latest setuptools
   pip: name=setuptools
-       extra_args='-i http://pypi.douban.com/simple/'
+       extra_args='-i http://pypi.douban.com/simple/ --trusted-host pypi.douban.com'
        state=latest
 
 - name: pip install latest setuptools2
   pip: name=setuptools
-       extra_args='-i http://pypi.douban.com/simple/'
+       extra_args='-i http://pypi.douban.com/simple/ --trusted-host pypi.douban.com'
        state=latest
 
 - name: pip install ansible
   pip: name=ansible
-       extra_args='-i http://pypi.douban.com/simple/'
+       extra_args='-i http://pypi.douban.com/simple/ --trusted-host pypi.douban.com'
        state=latest
 
 - name: create compass directories
