copy roles to /var/ansible
Signed-off-by: baiguoku <baiguoku@huawei.com>

--- a/install/roles/compass/tasks/RedHat.yml
+++ b/install/roles/compass/tasks/RedHat.yml
@@ -131,6 +131,10 @@
   shell: cp -rf /opt/compass-adapters/ansible/openstack_juno /var/ansible/.
   when: "'ansible' in {{ pkg_installer }}"
 
+- name: copy ansible roles into ansible folder
+  shell: cp -rf /opt/compass-adapters/ansible/roles /var/ansible/.
+  when: "'ansible' in {{ pkg_installer }}"
+
 - name: write python home into switch virtualenv
   lineinfile: dest={{ COMPASS_PATH }}/bin/switch_virtualenv.py.template
               regexp="^virtual\_env\ \=\ \'\$PythonHome\'"
