--- a/install/roles/cobbler/tasks/RedHat.yml
+++ b/install/roles/cobbler/tasks/RedHat.yml
@@ -280,7 +280,7 @@
   when: push_ssh_key is not defined
 
 - name: edit profiles
-  shell: cobbler profile edit --name={{ item.name }} --repo={{ item.ppa_repo_name }} --distro={{ item.name }} --ksmeta="tree=http://{{ mgmt_next_ip }}/cobbler/ks_mirror/{{ item.name }}" --kickstart=/var/lib/cobbler/kickstarts/{{ item.kickstart }} --kopts="{{ item.kopts }} --kopts-post="{{ item.kopts_post }}"
+  shell: cobbler profile edit --name={{ item.name }} --repo={{ item.ppa_repo_name }} --distro={{ item.name }} --ksmeta="tree=http://{{ mgmt_next_ip }}/cobbler/ks_mirror/{{ item.name }}" --kickstart=/var/lib/cobbler/kickstarts/{{ item.kickstart }} --kopts="{{ item.kopts }}" --kopts-post="{{ item.kopts_post }}"
   with_items: distros
 
 - name: edit profiles with push ssh key option
