add pip&image http config
Change-Id: I6c3d040c41fad377df7f147963842fb474b49077
Signed-off-by: baigk <baiguoku@huawei.com>

--- a/install/roles/compass/tasks/RedHat.yml
+++ b/install/roles/compass/tasks/RedHat.yml
@@ -208,8 +208,12 @@
   shell: /opt/compass/bin/manage_db.py createdb
   run_once: True
 
-- name: copy ods-server httpd config
-  copy: src=ods-server.conf dest=/etc/httpd/conf.d/ods-server.conf
+- name: copy httpd config
+  copy: src={{ item }} dest=/etc/httpd/conf.d/{{ item }}
+  with_items:
+    - ods-server.conf
+    - pip.conf
+    - images.conf
   notify:
     restart http service
 
