--- a/install/roles/cobbler/tasks/RedHat.yml
+++ b/install/roles/cobbler/tasks/RedHat.yml
@@ -1,57 +1,9 @@
 ---
-
-- name: install base packages
-  yum: name={{ item }} state=present
-  with_items:
-    - wget
-    - git
-
-- name: check epel presence
-  command: rpm -q epel-release
-  register: epel_presence
-  ignore_errors: yes
-
-- name: check atomic repo presence
-  command: rpm -q atomic-release
-  register: atomic_presence
-  ignore_errors: yes
-
 #- name: get epel version
 #  command: > 
 #    wget -q {{ epel_base_url }} -O - | grep -oE "(href=\"epel-release-6-[0-9,.].*)" | cut -d\" -f2
 #  register: epel_file_name
 #  when: epel_presence.rc != 0
-
-- name: install epel
-  yum: name={{ epel_base_url }}/{{ epel_file_name }} state=present
-  when: epel_presence.rc != 0
-
-- name: install atomic repo
-  yum: name={{ atomic_base_url }}/{{ atomic_file_name }} state=present
-  when: atomic_presence.rc != 0
-
-- name: yum update
-  yum: name=* state=latest update_cache=yes
-
-- name: install related packages
-  yum: name={{ item }} state=present
-  with_items:
-    - cobbler
-    - cobbler-web
-    - createrepo
-    - mkisofs
-    - syslinux
-    - debmirror
-    - pykickstart
-    - cman 
-    - bind
-    - rsync
-    - dhcp
-    - xinetd
-    - tftp-server
-    - gcc
-    - httpd
-    - libselinux-python
 
 - name: turn off iptables
   service: name=iptables state=stopped enabled=no
@@ -92,16 +44,11 @@
     - { name: named.template.nodocker.j2, file_name: named.template }
     - { name: settings.j2, file_name: settings }
   notify:
+    - restart httpd
     - restart cobbler
     - cobbler sync
 
 - meta: flush_handlers
-
-- name: clone snippets
-  git: repo={{ compass_adapter_source }}
-       dest=/opt/compass-adapters
-       update=yes
-       force=yes
 
 - name: remove old cobbler folders
   shell: rm -rf path=/var/lib/cobbler/{{ item }}
