--- a/install/roles/cobbler/tasks/RedHat.yml
+++ b/install/roles/cobbler/tasks/RedHat.yml
@@ -179,15 +179,9 @@
     - httpd
     - cobblerd
 
-- name: download ppa repo images
-  get_url: url={{ item.ppa_lab_url }} dest=/var/lib/cobbler/repo_mirror/{{ item.ppa_repo_name }}.tar.gz
+- name: copy ppa repo images
+  copy: src={{ item.ppa_directory }} dest=/var/lib/cobbler/repo_mirror/{{ item.ppa_repo_name }}.tar.gz
   with_items: distros
-  when: region == "lab"
-
-- name: download ppa repo images
-  get_url: url={{ item.ppa_us_url }} dest=/var/lib/cobbler/repo_mirror/{{ item.ppa_repo_name }}.tar.gz
-  with_items: distros
-  when: region == "us"
 
 - name: untar ppa repo images
   unarchive: src=/var/lib/cobbler/repo_mirror/{{ item.ppa_repo_name }}.tar.gz
@@ -226,15 +220,9 @@
 - name: create directory for images
   file: path=/var/lib/cobbler/iso state=directory
 
-- name: download images
-  get_url: url={{ item.iso_lab_url }} dest=/var/lib/cobbler/iso/{{ item.name }}.iso mode=0644
+- name: copy images file
+  copy: src={{ item.iso_directory }} dest=/var/lib/cobbler/iso/{{ item.name }}.iso mode=0644
   with_items: distros
-  when: region == "lab"
-
-- name: download images
-  get_url: url={{ item.iso_us_url }} dest=/var/lib/cobbler/iso/{{ item.name }}.iso mode=0644
-  with_items: distros
-  when: region == "us"
 
 - name: mount_info
   command: mount
