--- a/install/roles/compass/tasks/RedHat.yml
+++ b/install/roles/compass/tasks/RedHat.yml
@@ -32,29 +32,39 @@
 
 - name: install virtualenv
   pip: name=virtualenv extra_args='-i http://pypi.douban.com/simple/ --trusted-host pypi.douban.com'
+  register: pip_install_result
+  until: pip_install_result|success
   retries: 5
 
 - name: pip install compass into virtualenv
   pip: name={{ COMPASS_PATH }} virtualenv={{ COMPASS_PATH }}/venv
        extra_args='-i http://pypi.douban.com/simple/ --trusted-host pypi.douban.com'
+  register: pip_install_result
+  until: pip_install_result|success
   retries: 5
 
 - name: pip install latest setuptools
   pip: name=setuptools
        extra_args='-i http://pypi.douban.com/simple/ --trusted-host pypi.douban.com'
        state=latest
+  register: pip_install_result
+  until: pip_install_result|success
   retries: 5
 
 - name: pip install latest setuptools2
   pip: name=setuptools
        extra_args='-i http://pypi.douban.com/simple/ --trusted-host pypi.douban.com'
        state=latest
+  register: pip_install_result
+  until: pip_install_result|success
   retries: 5
 
 - name: pip install ansible
   pip: name=ansible
        extra_args='-i http://pypi.douban.com/simple/ --trusted-host pypi.douban.com'
        state=latest
+  register: pip_install_result
+  until: pip_install_result|success
   retries: 5
 
 - name: create compass directories
