--- a/install/roles/compass/files/pip.conf
+++ b/install/roles/compass/files/pip.conf
@@ -1,9 +1,5 @@
-Alias /pip /var/www/pip
-
-<Directory "/var/www/pip">
-    SetEnv VIRTUALENV
-    Options Indexes FollowSymLinks
-    Order allow,deny
-    Allow from all
-</Directory>
-
+[global]
+find-links = http://127.0.0.1/pip
+no-index = true
+[install]
+trusted-host=127.0.0.1
