--- a/install/roles/compass/tasks/RedHat.yml
+++ b/install/roles/compass/tasks/RedHat.yml
@@ -45,16 +45,15 @@
 - name: create compass database
   mysql_db: name=compass state=present
 
-
 - name: install setuptools
   shell: |
-    cd /var/www/pip; 
+    cd /var/www/pip
     version=`ls setuptools* | sed -e "s/setuptools-//" -e "s/.zip//g"`
     python ez_setup.py --download-base file:// --version $version
     cd -
 
 - name: install pip
-  easy_install: name=pip
+  shell: easy_install `ls /var/www/pip/pip-*.tar.gz`
 
 - name: create pip config directory
   file: path=~/.pip state=directory
