--- a/install/roles/cobbler/tasks/RedHat.yml
+++ b/install/roles/cobbler/tasks/RedHat.yml
@@ -97,7 +97,7 @@
     - /var/log/cobbler/tasks
 
 - name: get all ppa file
-  shell: find /opt/cobbler -name *.tar.gz
+  shell: find /var/cobbler -name *.tar.gz
   register: ppa_files
 
 - name: untar cobbler ppa repo
@@ -124,7 +124,7 @@
 
 - name: import iso
   shell: |
-    for i in `ls /opt/cobbler/{{ item.key}}/iso/*`; do
+    for i in `ls /var/cobbler/{{ item.key}}/iso/*`; do
         name=`basename $i | sed -e 's/.iso//g' -e 's/-amd64//g' -e 's/-x86_64//g'`-x86_64
         if [[ `mount | grep "$name"` ]]; then
             continue
@@ -151,14 +151,14 @@
 
 - name: add repos
   shell: |
-    for i in `ls /opt/cobbler/{{ item.key }}/ppa/*`; do
+    for i in `ls /var/cobbler/{{ item.key }}/ppa/*`; do
         filename=`basename $i | sed 's/.tar.gz//g'`
         cobbler repo add --name $filename --mirror=/var/lib/cobbler/repo_mirror/$filename \
                          --mirror-locally=Y --arch=x86_64 {{ item.value.extra | default()}}
     done
   with_dict: distros
   args:
-    creates: /opt/repo_added.txt
+    creates: /var/repo_added.txt
   ignore_errors: yes
   run_once: True
 
@@ -190,7 +190,7 @@
 
 - name: edit profiles
   shell: |
-    for i in `ls /opt/cobbler/{{ item.key }}/iso/*`; do
+    for i in `ls /var/cobbler/{{ item.key }}/iso/*`; do
         name=`basename $i | sed -e 's/.iso//g' -e 's/-amd64//g' -e 's/-x86_64//g'`-x86_64
         cobbler profile edit --name=$name \
             --distro=$name --ksmeta="tree=http://{{ mgmt_next_ip }}/cobbler/ks_mirror/$name" \
@@ -201,7 +201,7 @@
     done
   with_dict: distros
   args:
-    creates: /opt/add_profile.txt
+    creates: /var/add_profile.txt
 
 - name: cobbler repo sync again
   shell: cobbler reposync
