--- a/install/roles/compass/files/elk.conf
+++ b/install/roles/compass/files/elk.conf
@@ -1,7 +1,7 @@
 ProxyRequests off
 ProxyPreserveHost On
-ProxyPass /kibana    http://localhost:5601/app/kibana
-ProxyPassReverse /kibana http://localhost:5601/app/kibana
+ProxyPass /app/kibana    http://localhost:5601/app/kibana
+ProxyPassReverse /app/kibana http://localhost:5601/app/kibana
 ProxyPass /bundles http://localhost:5601/bundles
 ProxyPassReverse /bundles http://localhost:5601/bundles
 ProxyPass /elasticsearch http://localhost:9200/
