--- a/install/roles/compass/files/elk.conf
+++ b/install/roles/compass/files/elk.conf
@@ -1,8 +1,17 @@
 ProxyRequests off
 ProxyPreserveHost On
+
 ProxyPass /app/kibana    http://localhost:5601/app/kibana
 ProxyPassReverse /app/kibana http://localhost:5601/app/kibana
+
 ProxyPass /bundles http://localhost:5601/bundles
 ProxyPassReverse /bundles http://localhost:5601/bundles
+
+ProxyPass /status http://localhost:5601/status
+ProxyPassReverse /status http://localhost:5601/status
+
+ProxyPass /api http://localhost:5601/api
+ProxyPassReverse /api http://localhost:5601/api
+
 ProxyPass /elasticsearch http://localhost:9200/
 ProxyPassReverse /elasticsearch http://localhost:9200/
