kibana url /api conflicts with compass url /api
Signed-off-by: grakiss <grakiss.wanglei@huawei.com>

--- a/install/roles/compass/files/elk.conf
+++ b/install/roles/compass/files/elk.conf
@@ -10,8 +10,8 @@ ProxyPassReverse /bundles http://localhost:5601/bundles
 ProxyPass /status http://localhost:5601/status
 ProxyPassReverse /status http://localhost:5601/status
 
-ProxyPass /api http://localhost:5601/api
-ProxyPassReverse /api http://localhost:5601/api
+#ProxyPass /api http://localhost:5601/api
+#ProxyPassReverse /api http://localhost:5601/api
 
 ProxyPass /elasticsearch http://localhost:9200/
 ProxyPassReverse /elasticsearch http://localhost:9200/
