--- a/install/roles/compass/files/elk.conf
+++ b/install/roles/compass/files/elk.conf
@@ -1,6 +1,9 @@
 ProxyRequests off
 ProxyPreserveHost On
 
+ProxyPass /app/kibana/api http://localhost:5601/api
+ProxyPassReverse /app/kibana/api http://localhost:5601/api
+
 ProxyPass /app/kibana    http://localhost:5601/app/kibana
 ProxyPassReverse /app/kibana http://localhost:5601/app/kibana
 
@@ -9,9 +12,6 @@ ProxyPassReverse /bundles http://localhost:5601/bundles
 
 ProxyPass /status http://localhost:5601/status
 ProxyPassReverse /status http://localhost:5601/status
-
-#ProxyPass /api http://localhost:5601/api
-#ProxyPassReverse /api http://localhost:5601/api
 
 ProxyPass /elasticsearch http://localhost:9200/
 ProxyPassReverse /elasticsearch http://localhost:9200/
