--- a/install/roles/compass/tasks/RedHat.yml
+++ b/install/roles/compass/tasks/RedHat.yml
@@ -253,6 +253,9 @@
   when: test is defined and test == True
   tags: switch_machine
 
+- name: install keyczar for accelerate
+  pip: name=python-keyczar state=present extra_args='--pre'
+
 - name: inject switches and mac addresses
   shell: /opt/compass/bin/manage_db.py set_switch_machines --switch_machines_file /etc/compass/switch_machines_file
   when: test is defined and test == True
