--- a/install/roles/compass/tasks/RedHat.yml
+++ b/install/roles/compass/tasks/RedHat.yml
@@ -77,8 +77,8 @@
 
 - meta: flush_handlers
 
-- name: stop firewalld
-  service: name=firewalld state=stopped enabled=no
+- name: stop iptables
+  service: name=iptables state=stopped enabled=no
 
 # TODO: currently compass use root user and group, apache has to
 # be in root group to write wsgi logs in /var/log/compass/, need
