--- a/install/roles/cobbler/tasks/RedHat.yml
+++ b/install/roles/cobbler/tasks/RedHat.yml
@@ -4,7 +4,7 @@
   with_items: cobbler_packages
 
 - name: turn off iptables
-  service: name=iptables state=stopped enabled=no
+  service: name=firewalld state=stopped enabled=no
 
 - name: replace config files
   copy: src={{ item.name }} dest={{ item.dest }}
